; ModuleID = '/home/carl/AnghaBench/libgit2/tests/core/extr_env.c_setenv_and_check.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/core/extr_env.c_setenv_and_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @setenv_and_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setenv_and_check(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @cl_setenv(i8* %6, i8* %7)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i8*, i8** %3, align 8
  %11 = call i8* @cl_getenv(i8* %10)
  store i8* %11, i8** %5, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %18

14:                                               ; preds = %2
  %15 = load i8*, i8** %4, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @cl_assert_equal_s(i8* %15, i8* %16)
  br label %23

18:                                               ; preds = %2
  %19 = load i8*, i8** %5, align 8
  %20 = icmp eq i8* %19, null
  %21 = zext i1 %20 to i32
  %22 = call i32 @cl_assert(i32 %21)
  br label %23

23:                                               ; preds = %18, %14
  %24 = load i8*, i8** %5, align 8
  %25 = call i32 @git__free(i8* %24)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @cl_setenv(i8*, i8*) #1

declare dso_local i8* @cl_getenv(i8*) #1

declare dso_local i32 @cl_assert_equal_s(i8*, i8*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @git__free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
